megamenu fix and spacing adjust

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -198,7 +198,6 @@
     }
     .mega-menu .no-sub li a {
         color: #26286e!important;
-        padding: 1rem;
     }
     .mega-menu .no-sub li a:hover {
         background-color: #99D5E04D;
